--- a/.github/workflows/ecr-push.yml
+++ b/.github/workflows/ecr-push.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build, tag, and push image to ECR
         run: |
-          IMAGE_TAG=${GITHUB_SHA}
+          IMAGE_TAG=latest
           ECR_URI=${{ env.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
           
           echo "Building Docker image..."
